# verso

./: .env.example  .gitignore  README-FEATURES.md  TODO.md  eslint.config.mjs  middleware.ts  next.config.ts  package-lock.json  package.json  tailwind.config.ts  test-screenplay.txt
app/: globals.css  layout.tsx  not-found.tsx  sw.ts
components/: add-link-dialog.tsx  app-header.tsx  app-sidebar.tsx  aurora.tsx  autocomplete-dropdown.tsx  beat-board.tsx  bottom-nav.tsx  character-timeline.tsx  claude-analysis.tsx  command-palette.tsx  cursor-overlay.tsx  edit-profile-dialog.tsx  editable-title.tsx  editor-floating-panel.tsx  error-boundary.tsx  export-dialog.tsx  external-link-card.tsx  formatting-guide-dialog.tsx  image-upload.tsx  index-cards.tsx  index.ts  invite-member-dialog.tsx  keyboard-shortcuts-dialog.tsx  mobile-editor-toolbar.tsx  mobile-header-menu.tsx  nav-menu-item.tsx  new-project-dialog.tsx  noise.tsx  pending-invite-banner.tsx  pending-invites-dialog.tsx  production-panel.tsx  production-reports.tsx  productivity-widget.tsx  profile-hover-card.tsx  project-header.tsx  project-settings-dialog.tsx  publish-dialog.tsx  scene-flow.tsx  scene-workspace-panel.tsx  screenplay-card.tsx  (+16 more)
contexts/: editor-context.tsx  productivity-context.tsx  settings-context.tsx  (+1 more)
pagination-engine/: Cargo.toml
pagination-engine/src/: lib.rs
pagination-engine/src/layout/: continuation.rs  line_calculator.rs  mod.rs  page_breaker.rs
pagination-engine/src/types/: config.rs  element.rs  mod.rs  page.rs  result.rs
pagination-engine/src/utils/: measurements.rs  mod.rs
(+221 files in other folders)
